# peaker

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README.rst  TESTING.md  pyproject.toml  tox.ini
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.yaml
.github/workflows/: build.yml  tests.yml
docs/: README.md  index.rst
src/peaker/: __init__.py  get_artifacts.py  jwst_utils.py  parse_xmls.py  pdf_utils.py  peaker.py  plotting.py  roman_utils.py  table_utils.py  utils.py
src/peaker/tests/: conftest.py  test_get_artifacts.py  test_parse_xmls.py  test_pdf_utils.py  test_peaker.py  test_plotting.py  test_utils.py
src/peaker/tests/Data/jwst/: snippet1.xml
src/peaker/tests/Data/roman/: snippet2.xml
tests/: conftest.py  test_get_artifacts.py  test_parse_xmls.py  test_pdf_utils.py  test_peaker.py  test_plotting.py  test_table_utils.py
tests/Data/jwst/: snippet2.xml
tests/Data/roman/: snippet1.xml
