[project]
name = "peaker"
description = "My pretty cool package"
requires-python = ">=3.11"
authors = [
    { name = "Maria Pena-Guerrero" },
]
keywords = [
    "astronomy",
    "astrophysics",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "astropy>=4",
    "fpdf2",
    "matplotlib",
    "numpy>=1.25",
    "pyartifactory",
    "tzdata",
]
dynamic = [
    "version",
]
license-files = [
    "LICENSE.rst"
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/spacetelescope/peaker"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-astropy-header",
    "pytest-doctestplus",
]

[project.scripts]
peaker = "peaker.peaker:main"

[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tests" = [
    "data/*",
]


[tool.pytest.ini_options]
minverhion = "9.0"
norecursedirs = [
    "build",
]
astropy_header = true
doctest_plus = "enabled"

[tool.coverage.run]
source = [
    "src",
]
omit = [
    "peaker/tests/*",
    "peaker/version*",
    "*/peaker/tests/*",
    "*/peaker/version*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main\\(.*\\):",
    "pragma: py{ignore_python_version}",
    "def _ipython_key_completions_",
]
