[project]
name = "peaker"
description = "Generate memory usage reports from JUnit results"
readme = "README.md"
requires-python = ">=3.11"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Maria Pena-Guerrero" },
    { name = "STScI" }
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy>=4",
    "fpdf2",
    "matplotlib",
    "numpy>=1.25",
    "pyartifactory",
    "tzdata",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/spacetelescope/peaker"

[project.optional-dependencies]
docs = ["numpydoc", "pytest_doctestplus", "sphinx", "sphinx-autoapi", "sphinx-rtd-theme"]
test = ["pytest>=9", "pytest_doctestplus", "coverage"]
contrib = ["ruff", "ty"]

[project.scripts]
peaker = "peaker.peaker:main"

[build-system]
requires = [
  "setuptools>=61.2",
  "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "py3*"

[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64"]

[tool.coverage.run]
branch = true
parallel = true
source = ["peaker", "tests/"]
omit = ["*/peaker/tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "@overload",
  "@typing.overload",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
  "raise NotImplementedError",
  "\\.\\.\\.",
]

[tool.cruft]
skip = ["**/__init__.py", "tests/*"]

[tool.numpydoc_validation]
checks = [
  "all",
  "EX01",  # No examples section found
  "SA01",  # See Also section not found
  "ES01",  # No extended summary found
  "GL08",  # Object does not have a docstring. Ruff catches these, and allows more granular ignores.
  "PR01",  # Parameters not documented. Already caught by ruff.
  "PR09",  # Parameter description should finish with a period
  "RT02",  # First line of return should contain only the type
  "RT05",  # Return value description should finish with a period
]

[tool.pytest]
minversion = "9"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP",  # pyupgrade
]

[tool.setuptools_scm]
write_to = "src/peaker/_version.py"  # Automatically creates this file
version_scheme = "post-release"

